--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-NEST_HOST='0.0.0.0'
+NEST_HOST='localhost'
 NEST_PORT=3000
 
 TYPEORM_TYPE='postgres'
-TYPEORM_HOST='<server>.postgres.database.azure.com'
+TYPEORM_HOST='cloud.postgres.database.azure.com'
 TYPEORM_PORT=5432
-TYPEORM_USERNAME='<username>'
-TYPEORM_PASSWORD='<password>'
+TYPEORM_USERNAME='bogdan'
+TYPEORM_PASSWORD=1234abc*
 TYPEORM_DATABASE='users'
 TYPEORM_SYNCHRONIZE=true
