rename user.entity and database.module files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # compiled output
-/dist
+dist
 /node_modules
 
 # env variables
@@ -23,6 +23,7 @@ lerna-debug.log*
 
 # IDEs and editors
 /.idea
+.vscode
 .project
 .classpath
 .c9/
